k8s/frontend/01-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jerney-frontend
  namespace: jerney
  labels:
    app.kubernetes.io/name: jerney-frontend
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: jerney-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jerney-frontend
        app.kubernetes.io/part-of: jerney
        app.kubernetes.io/component: frontend
    spec:
      automountServiceAccountToken: false
      tolerations:
        - key: "karpenter.sh/disrupted"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: jerney-frontend
          image: ghcr.io/aakash-thakre/end-to-end-kubernetes-devsecops-three-tier-app-deployment/jerney-frontend:d5fc151
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 101
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
